--- a/client/userData.html
+++ b/client/userData.html
@@ -1,54 +1,73 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Data</title>
-    <link rel="stylesheet" href="styles/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>User Data</title>
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>User Data</h1>
-        </header>
-        <section id="user-data-section">
-            <h2>QR Code User Information</h2>
-            <div id="user-data">
-                <!-- User data will be dynamically inserted here -->
-            </div>
-            <button onclick="goBack()">Back</button>
-        </section>
-    </div>
+  <div class="container">
+    <header>
+      <h1>User Data</h1>
+    </header>
+
+    <section id="user-data-section">
+      <h2>User Information</h2>
+      <div id="user-data">
+        <!-- User data will be dynamically inserted here -->
+      </div>
+      <div id="registration-prompt" style="display: none;">
+        <p>No user data found for this QR code. <a href="#" id="register-link">Register here</a>.</p>
+      </div>
+    </section>
 
     <script>
-        // Function to fetch user data based on QR code ID
-        document.addEventListener("DOMContentLoaded", async function () {
-            const params = new URLSearchParams(window.location.search);
-            const qrCodeId = params.get("qrCodeId");
+      document.addEventListener("DOMContentLoaded", async function () {
+        const urlParams = new URLSearchParams(window.location.search);
+        const qrCodeId = urlParams.get("qrCodeId");
 
-            try {
-                const response = await fetch(`/api/qr/${qrCodeId}`);
-                const data = await response.json();
+        if (qrCodeId) {
+          try {
+            const response = await fetch(`/api/qr/${qrCodeId}`);
+            const data = await response.json();
 
-                if (response.ok && data.name) {
-                    document.getElementById("user-data").innerHTML = `
-                        <p><strong>Name:</strong> ${data.name}</p>
-                        <p><strong>Email:</strong> ${data.email}</p>
-                        <p><strong>Phone:</strong> ${data.phone}</p>
-                    `;
-                } else {
-                    console.error("User data not found.");
-                    window.location.href = `/register.html?qrCodeId=${qrCodeId}`;
-                }
-            } catch (error) {
-                console.error("Error fetching user data:", error);
-                window.location.href = "/error.html";
+            if (response.ok) {
+              if (data.name || data.email || data.phone) {
+                displayUserData(data);
+              } else {
+                displayRegistrationPrompt(qrCodeId);
+              }
+            } else {
+              console.error("Error fetching user data:", data.message);
+              document.getElementById("user-data").innerHTML = "<p>Error fetching user data.</p>";
             }
-        });
-
-        function goBack() {
-            window.history.back();
+          } catch (error) {
+            console.error("Error:", error);
+            document.getElementById("user-data").innerHTML = "<p>Error fetching user data.</p>";
+          }
+        } else {
+          console.error("QR Code ID is missing in the URL");
+          document.getElementById("user-data").innerHTML = "<p>QR Code ID is missing.</p>";
         }
+      });
+
+      function displayUserData(data) {
+        const userDataDiv = document.getElementById("user-data");
+        userDataDiv.innerHTML = `
+          <p><strong>Name:</strong> ${data.name}</p>
+          <p><strong>Email:</strong> ${data.email}</p>
+          <p><strong>Phone:</strong> ${data.phone}</p>
+        `;
+      }
+
+      function displayRegistrationPrompt(qrCodeId) {
+        const promptDiv = document.getElementById("registration-prompt");
+        promptDiv.style.display = "block";
+        document.getElementById("register-link").href = `/register.html?qrCodeId=${qrCodeId}`;
+      }
     </script>
+  </div>
 </body>
 </html>
